# projectsdeliled

Android Studio Apps/DELITECH/: deliled.jks  key.jks  local.properties  private_key.pepk
Android Studio Apps/Dmx/: build.gradle  local.properties  settings.gradle
DELITECH/Application/: build.gradle
esp-project/.metadata/: version.ini
esp-project/8ms-esp32-main/: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
esp-project/Bispectrum-UVC-Master/: .cproject  .project  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old  version.txt
esp-project/Bispectrum-UVC-Slave/: CMakeLists.txt  sdkconfig
esp-project/Bispectrum-UVC-Slave-test-AP+Sta/: .cproject  .project  sdkconfig  sdkconfig.old
esp-project/Bispectrum-UVC-Slave_MESH/: sdkconfig
esp-project/LumiAir-Lite/: CMakeLists.txt  Makefile  anti_rollback_partition.csv  sdkconfig  sdkconfig.old
esp-project/LumiAir-Lite/main/: CMakeLists.txt  adc.c  adc.h  app_gpio.c  app_gpio.h  autolight.c  autolight.h  base_mac_address.c  base_mac_address.h  bluetooth.c  bluetooth.h  component.mk  https_ota.c  https_ota.h  i2c.c  i2c.h  lightcontrol.c  lightcontrol.h  main.c  main.h  scanwifi.c  scanwifi.h  sntpservice.c  sntpservice.h  unitcfg.c  unitcfg.h  webservice.c  webservice.h
esp-project/UVC-Deliled/: .cproject  CMakeLists.txt  sdkconfig  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32c3  sdkconfig.defaults.esp32s3  sdkconfig.old
esp-project/UVC-Deliled-Master/: .cproject  .project  sdkconfig  sdkconfig.old
esp-project/UVC-Deliled-Master-2_Sensors/: CMakeLists.txt
esp-project/UVC-Deliled-Nat-Router-Slave/: CMakeLists.txt  sdkconfig
esp-project/UVC-Deliled-Nat-Router-Slave/main/: CMakeLists.txt  app_gpio.c  app_gpio.h  base_mac_address.c  component.mk  espnow_slave.c  espnow_slave.h  main.c  main.h  udp_client.c  udp_client.h  unitcfg.c  unitcfg.h  uvc_task.c  uvc_task.h
esp-project/UVC-Deliled-Slave/: .cproject  .gitignore  .project  partitions.csv  sdkconfig  sdkconfig.old
esp-project/UVC-Deliled-Slave-2_Sensors/: CMakeLists.txt  sdkconfig
esp-project/bt_discovery/: .cproject  .project  sdkconfig
esp-project/deliled/: .cproject  .project  CMakeLists.txt  Makefile  partitions.csv  sdkconfig  sdkconfig.old
esp-project/deliled/main/: CMakeLists.txt  adc.c  adc.h  app_gpio.c  app_gpio.h  autolight.c  autolight.h  component.mk  emailclient.c  ftpclient.c  ftpclient.h  gatt_server.c  gatt_server.h  i2c.c  i2c.h  main.c  main.h  mqttclient.c  mqttclient.h  ota_check.c  ota_check.h  ota_client.c  ota_client.h  sntp_client.c  udp_client.c  udp_client.h  unitcfg.c  unitcfg.h  webservice.c  webservice.h
esp-project/deliled_310319/: .cproject  .project
esp-project/esp32_nat_router-master/: sdkconfig
esp-project/esp32_nat_router-master/main/: CMakeLists.txt  aes.c  aes.h  app_gpio.c  app_gpio.h  autouvc.c  autouvc.h  base_mac_address.c  emailclient.c  emailclient.h  esp32_nat_router.c  espnow_master.c  espnow_master.h  http_server.c  http_server.h  i2c.c  i2c.h  main.c  nat_router.c  nat_router.h  smtp_client.c  smtp_client.h  system_init.c  system_init.h  tcp_server.c  tcp_server.h  udp_server.c  udp_server.h  unitcfg.c  unitcfg.h  uvc_task.c  uvc_task.h
esp-project/gatt_security_client/: sdkconfig  sdkconfig.old
esp-project/gatt_security_server/: sdkconfig  sdkconfig.old
esp-project/get-started/: .cproject  .project  CMakeLists.txt  Makefile  README.md  README_cn.md  sdkconfig.defaults
esp-project/m5core2-basic-idf-master/: sdkconfig  sdkconfig.old
esp-project/pwm_capture/: .cproject  .project  CMakeLists.txt  Makefile  sdkconfig  sdkconfig.old
esp-project/pwm_capture/main/: CMakeLists.txt  autolight.c  autolight.h  base_mac_address.c  base_mac_address.h  bluetooth.c  bluetooth.h  lightcontrol.c  lightcontrol.h  main.c  main.h  pwm_capture.c  pwm_capture.h  scanwifi.c  scanwifi.h  system_init.c  system_init.h  unitcfg.c  unitcfg.h  webservice.c  wificonnect.c  wificonnect.h
flutter Apps (test)/notificationapp/: README.md  pubspec.yaml
flutter Apps/flutter_uvc_app/: README.md  (+2 more)
flutter_app_dental_uvc/: README.md
flutter_uvc_app/: README.md  pubspec.yaml
notificationapp/: pubspec.yaml
(+964 files in other folders)
