idf_component_register(SRCS 
                        "app_gpio.c" 
                        "nat_router.c" 
                        "unitcfg.c" 
                        "main.c" 
                        "system_init.c" 
                        "tcp_server.c" 
                        "udp_server.c" 
                        "base_mac_address.c"
                        "http_server.c"
                        "uvc_task.c"
                        "aes.c"
                    INCLUDE_DIRS ".")
