idf_component_register(SRCS 
                        "app_gpio.c" 
                        "nat_router.c" 
                        "unitcfg.c" 
                        "main.c" 
                        "system_init.c" 
                        "tcp_server.c" 
                        "udp_server.c" 
                        "base_mac_address.c"
                        "http_server.c"
                        "uvc_task.c"
                        "aes.c"
                        "i2c.c"
                        "autouvc.c"
                        "smtp_client.c"
                        "emailclient.c"
                        "espnow_master.c"
                    INCLUDE_DIRS "."
                    EMBED_TXTFILES server_root_cert.pem esp_logo.png)
